<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">chinchinaExplora</string>
    <string name="nombre_hacienda">Hacienda Guayabal</string>
    <string name="imagen_finca">Hacienda Guayabal</string>
    <string name="ubicacion">hacienda</string>
    <string name="app_temperatura">temperatura_finca</string>
    <string name="missitios">mis_sitios</string>
    <string name="nombre_ubicacion">ubicacion</string>
    <string name="location">Km 13 via chinchina a pereira</string>
    <string name="temperature">19 C°</string>
    <string name="sites">Mis sitios</string>
    <string name="intro">Acerca de:</string>
    <string name="descripcion_sitio" />
    <string name="Descripcion_sitio_hacienda">Un tránsito mágico, del grano a la taza. Sabes porque es el mejor café del mundo? Las respuestas están en la Hacienda Guayabal. Para conocer a Colombia, debes empezar por su corazón. El mejor Tour del café, tour guiado, visitas todos los días y mucho más. Café cultivado en familia por más de 50 años. 100% café Colombiano.</string>

    <string name="retornar">atras</string>
    <string name="puntuacion" tools:ignore="MissingTranslation">Puntuación</string>
    <string name="pequeña_descripcion" tools:ignore="MissingTranslation">Tour guiado del grano a la taza de café, ven a conocer el café más suave del mundo</string>
</resources>